--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,29 +1,41 @@
 <h1>Usernameのページ</h1>
+<p class="text-center"><%= flash[:notice] %></p>
+<head>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="http://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/move02/5-8/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="http://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/move02/5-8/css/5-8.css">
+</head>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Date on</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<body>
+  <div id="particles-js"></div>
+  <div id="wrapper">
+    <p><br><a href="https://vincentgarreau.com/particles.js/" target="_blank"></a></p>
+  </div>
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src="http://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/move02/5-8/js/5-8.js"></script>
 
-  <tbody>
-    <% @contacts.each do |contacts| %>
+  <table class="table">
+    <thead>
       <tr>
-        <td><%= booking.title %></td>
-        <td><%= booking.content %></td>
-        <td><%= booking.date_on %></td>
-        <td><%= link_to 'Show', booking %></td>
-        <td><%= link_to 'Edit', edit_booking_path(booking) %></td>
-        <td><%= link_to 'Destroy', booking, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>名前</th>
+        <th>メール</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @contacts.each do |contact| %>
+        <tr>
+          <td><%= contact.name %></td>
+          <td><%= contact.email %></td>
+          <td><button type="button" class="btn btn-outline-info"><%= link_to '詳細', booking_path(task.id) %></button></td>
+        <td><button type="button" class="btn btn-outline-success"><%= link_to "編集", edit_task_path(task.id) %></button></td>
+        <td><button type="button" class="btn btn-outline-danger"><%= link_to "削除", task_path(task.id), method: :delete, data: {confirm: '本当に削除しますか？'} %></button></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</body>
 
 <br>
 
-<%= link_to 'New Booking', new_booking_path %>
+<%= link_to '連絡先を追加', new_contact_path %>
