--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <h2>連絡先一覧</h2>
   <div id="particles-js"></div>
   <div id="wrapper">
     <p><br><a href="https://vincentgarreau.com/particles.js/" target="_blank"></a></p>
@@ -37,6 +38,14 @@
     </tbody>
   </table>
 </body>
+
+<h2>検索</h2>
+<%= search_form_for @q, url: search_contacts_path do |f| %>
+  <%= f.label :name_cont, 'ユーザー名' %>
+  <%= f.search_field :name_cont %>
+  <br>
+  <%= f.submit '検索' %>
+<% end %>
 
 <br>
 
