resized the logo

--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :日付 %>
+    <%= form.label :祝い言送信予定日 %>
     <%= form.date_field :date_on %>
   </div>
 
