--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body>
     <%= link_to root_path do %>
-      <%= image_tag 'logo.jpg' %>
+      <% image_tag 'logo.jpg' %>
     <% end %>
     <% if user_signed_in? %>
       <%= link_to "新規作成", new_user_session_path %>
