enabled to create new contact

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @user.name %>のページ</h1>
+<h1><%#= @user.name %>のページ</h1>
 <p class="text-center"><%= flash[:notice] %></p>
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -7,7 +7,13 @@
 </head>
 
 <body>
-  <h2>連絡先一覧</h2>
+<h2>連絡先一覧</h2>
+<%= search_form_for @q, url: search_contacts_path do |f| %>
+  <%= f.label :name_cont, 'ユーザー名' %>
+  <%= f.search_field :name_cont %>
+  <br>
+  <%= f.submit '検索' %>
+<% end %>
   <div id="particles-js"></div>
   <div id="wrapper">
     <p><br><a href="https://vincentgarreau.com/particles.js/" target="_blank"></a></p>
@@ -28,8 +34,16 @@
       <% @contacts.each do |contact| %>
         <tr>
           <td><%= contact.name %></td>
-          <td><%= contact.bookings.date_on %></td>
-          <td><%= contact.categories.name %></td>
+          <td>
+            <%= contact.bookings.each do |booking| %>
+              <%= booking.date_on %>
+            <% end %>
+          </td>
+          <td>
+            <%= contact.categories.each do |category| %>
+              <%= category.name %>
+            <% end %>
+          </td>
           <td><button type="button" class="btn btn-outline-info"><%= link_to '詳細', booking_path(contact.id) %></button></td>
         <td><button type="button" class="btn btn-outline-success"><%= link_to "編集", edit_contact_path(contact.id) %></button></td>
         <td><button type="button" class="btn btn-outline-danger"><%= link_to "削除", contact_path(contact.id), method: :delete, data: {confirm: '本当に削除しますか？'} %></button></td>
@@ -37,18 +51,10 @@
       <% end %>
     </tbody>
   </table>
-</body>
-
-<h2>検索</h2>
-<%= search_form_for @q, url: search_contacts_path do |f| %>
-  <%= f.label :name_cont, 'ユーザー名' %>
-  <%= f.search_field :name_cont %>
-  <br>
-  <%= f.submit '検索' %>
-<% end %>
 
 <br>
 
 <%= link_to '連絡先を追加', new_contact_path %>
 
 <%= paginate @contacts %>
+</body>
