--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,33 +1,42 @@
-<h2>祝い言新規作成</h2>
-<%= form_with(model: booking) do |form| %>
+<%= form_with(model: booking, local: true) do |form| %>
   <% if booking.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(booking.errors.count, "error") %> prohibited this booking from being saved:</h2>
+      <h2><%= @booking.errors.count %>個のエラーがあります。</h2>
 
       <ul>
-        <% booking.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+        <% booking.errors.full_messages.each do |error| %>
+          <li><%= msg %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
 
   <div class="field">
-    <%= form.label :title %>
+    <%= form.label :タイトル %>
     <%= form.text_field :title %>
   </div>
 
   <div class="field">
-    <%= form.label :content %>
+    <%= form.label :内容 %>
     <%= form.text_area :content %>
   </div>
 
   <div class="field">
-    <%= form.label :date_on %>
-    <%= form.date_select :date_on %>
+    <%= form.label :祝い言を送る相手 %>
+    <%= form.select :contact_id, Contact.all.pluck(:name, :id) %>
+  </div>
+
+  <div class="field">
+    <%= form.label :日付 %>
+    <%= form.date_field :date_on %>
+  </div>
+
+  <div class="field">
+    <%= form.label :祝い言カテゴリー %>
+    <%= form.select :category_id, Category.all.pluck(:name, :id) %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit :登録, class: "btn btn-warning" %>
   </div>
 <% end %>
