--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Booking</h1>
+<h2>祝い言 編集</h2>
 
 <%= render 'form', booking: @booking %>
 
-<%= link_to 'Show', @booking %> |
-<%= link_to 'Back', bookings_path %>
+<%= link_to '更新', booking_path %>
