--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,19 +1,30 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Title:</strong>
+  <strong>タイトル: </strong>
   <%= @booking.title %>
 </p>
 
 <p>
-  <strong>Content:</strong>
+  <strong>内容: </strong>
   <%= @booking.content %>
 </p>
 
 <p>
-  <strong>Date on:</strong>
-  <%= @booking.date_on %>
+  <strong>祝い言を送る相手: </strong>
+    <%= @booking.contact_id, Contact.all.pluck(:name, :id) %>
 </p>
 
-<%= link_to 'Edit', edit_booking_path(@booking) %> |
-<%= link_to 'Back', bookings_path %>
+<p>
+  <strong>日付: </strong>
+    <%= @booking.date_on %>
+</p>
+
+<p>
+  <strong>祝い言カテゴリー: </strong>
+    <%= @booking.category_id, Category.all.pluck(:name, :id) %>
+</p>
+
+<%= link_to '編集', edit_booking_path(@booking) %> |
+<%= link_to '削除', booking_path(@booking) %> |
+<%= link_to '戻る', root_path %>
