--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h2>連絡先一覧</h2>
+<h2>送信予定一覧</h2>
 <%= search_form_for @q, url: search_contacts_path do |f| %>
   <%= f.label :name_cont, 'ユーザー名' %>
   <%= f.search_field :name_cont %>
@@ -35,9 +35,9 @@
         <tr>
           <td><%= contact.name %></td>
           <td>
-            <% contact.bookings.each do |booking| %>
-              <%= booking.date_on %>
-            <% end %>
+          <%= contact.bookings.each do |booking| %>
+            <%= booking.date_on %>
+          <% end %>
           </td>
           <td>
             <% contact.categories.each do |category| %>
@@ -45,8 +45,6 @@
             <% end %>
           </td>
           <td><button type="button" class="btn btn-outline-info"><%= link_to '詳細', booking_path(contact.id) %></button></td>
-        <td><button type="button" class="btn btn-outline-success"><%= link_to "連絡先を編集", edit_contact_path(contact.id) %></button></td>
-        <td><button type="button" class="btn btn-outline-danger"><%= link_to "連絡先を削除", contact_path(contact.id), method: :delete, data: {confirm: '本当に削除しますか？'} %></button></td>
         </tr>
       <% end %>
     </tbody>
@@ -54,7 +52,7 @@
 
 <br>
 
-<%= link_to '連絡先を追加', new_contact_path %>
+<%= link_to '連絡先一覧', bookings_path %>
 
 <%= paginate @contacts %>
 </body>
