added the explanation of this app

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,4 +1,8 @@
 <h1><%= @user.name %>のページ</h1>
+<p style="margin: 20px; font-size: 20px;">
+  うっかり仲良しの友人の誕生日を忘れていて後になって気がついた、自分の結婚記念日にパートナーにメッセージを送るのを忘れてしまった、クリスマスのメッセージや新年の挨拶を送っていなかった、などありませんか？大切な日の祝い言（ごと）を伝え忘れて苦い経験をしてしまったことがある方は多いのではないでしょうか。この問題を解決してくれるのがこのアプリです。つい忘れがちな、自分の大切な人への祝い言を自動で送ってくれます。
+</p>
+<div style="width: 500px;">
 <p class="text-center"><%= flash[:notice] %></p>
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
