--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Iwaigotauto</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
-  <%= link_to root_path do %>
-    <% image_tag 'logo.jpg' %>
-  <% end %>
-  <% if user_signed_in? %>
-    <ul class="nav navbar-nav navbar-right">
-    <li class="nav-item"><%= link_to "祝い言を登録", new_booking_path, class: "nav-link" %></li>
-    <li class="nav-item"><%= link_to "管理者画面", rails_admin_path, class: "nav-link" %></li>
-    <li class="nav-item"><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
-  <% else %>
-    <li class="nav-item"><%= link_to "新規登録", new_user_registration_path, class: "nav-link" %></li>
-    <li class="nav-item"><%= link_to "ログイン", new_user_session_path, class: "nav-link" %></li>
-  <% end %>
-    </ul>
-  </nav>
-  </div>
+  <head>
+    <title>Iwaigotauto</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+    <%= link_to root_path do %>
+      <% image_tag 'logo.jpg' %>
+    <% end %>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <% if user_signed_in? %>
+      <li class="nav-item"><%= link_to '連絡先一覧', contacts_path, class: "nav-link" %></li>
+      <li class="nav-item"><%= link_to "祝い言を登録", new_booking_path, class: "nav-link" %></li>
+      <li class="nav-item"><%= link_to "管理者画面", rails_admin_path, class: "nav-link" %></li>
+      <li class="nav-item"><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
+    <% else %>
+      <li class="nav-item"><%= link_to "新規登録", new_user_registration_path, class: "nav-link" %></li>
+      <li class="nav-item"><%= link_to "ログイン", new_user_session_path, class: "nav-link" %></li>
+    <% end %>
   
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ 
   </head>
 
   <body>
