changed the position of table under the application.html.erb

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,17 @@
  */
  @import "bootstrap";
 
-img{
-  margin: 20px 20px;
-  display: block
+ .header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.logo {
+  width: 100px;
+  height: auto;
+}
+
+.nav-links {
+  margin-left: 20px;
 }
