--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -4,14 +4,20 @@
 </p>
 <div style="width: 500px;">
 <p class="text-center"><%= flash[:notice] %></p>
+
 <body>
-<h2>送信予定一覧</h2>
-<%= search_form_for @q, url: search_bookings_path do |f| %>
-  <%= f.label :contact_name_cont, 'ユーザー名' %>
-  <%= f.search_field :contact_name_cont %>
-  <br>
-  <%= f.submit '検索' %>
-<% end %>
+  <h2>送信予定一覧</h2>
+
+  <table>
+    <%= search_form_for @q, url: search_bookings_path do |f| %>
+      <tr>
+        <td><%= f.label :contact_name_cont, 'ユーザー名' %></td>
+        <td><%= f.search_field :contact_name_cont %></td>
+        <td><%= f.submit '検索' %></td>
+      </tr>
+    <% end %>
+  </table>
+
   <table class="table">
     <thead>
       <tr>
@@ -22,16 +28,18 @@
     </thead>
 
     <tbody>
-    <% @bookings.each do |booking| %>
-      <tr>
-        <td><%= booking.contact.name %></td>
-        <td><%= booking.date_on %></td>
-        <td><%= booking.category.name %></td>          
-        <td><button type="button" class="btn btn-outline-info"><%= link_to '詳細', booking_path(booking.id) %></button></td>
+      <% @bookings.each do |booking| %>
+        <tr>
+          <td><%= booking.contact.name %></td>
+          <td><%= booking.date_on %></td>
+          <td><%= booking.category.name %></td>          
+          <td><button type="button" class="btn btn-outline-info"><%= link_to '詳細', booking_path(booking.id) %></button></td>
         </tr>
       <% end %>
     </tbody>
   </table>
+
+  
 
 <%= paginate @bookings %>
 </body>
