--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,4 +1,6 @@
-<h1>連絡先一覧</h1>
+<div>
+  <div class="col-md4 offset-md-4">
+    <h2 class="text-center" pt-5>連絡先一覧</h2>
 <p class="text-center"><%= flash[:notice] %></p>
 <br>
 <%= link_to '連絡先を追加', new_contact_path %>
