--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,3 +30,29 @@
 .nav-links {
   margin-left: 20px;
 }
+
+#wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align:center;
+}
+
+html,body{
+  height: 100%;/*高さを100%にして描画エリアをとる*/
+}
+
+#particles-js{ 
+  position:fixed;/*描画固定*/
+  z-index: -1;/*描画を一番下に*/
+  width: 100%;
+  height: 100%;
+  opacity: 1.0
+}
+
+#wrapper{
+  position: relative;
+  z-index: 1;
+  width:100%;
+  height: 100%;
+}
