--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>タイトル: </strong>
   <%= @booking.title %>
@@ -27,6 +25,6 @@
 
 <tr>
   <td><button type="button" class="btn btn-outline-success"><%= link_to '編集', edit_booking_path(@booking) %></button><td>
-  <td><button type="button" class="btn btn-outline-danger"><%= link_to '削除', booking_path(@booking) %></button></td>
+  <td><button type="button" class="btn btn-outline-danger"><%= button_to '削除', booking_path(@booking), method: :delete %></button></td>
   <td><button type="button" class="btn btn-outline-secondary"><%= link_to '戻る', root_path %></button></td>
 </tr>
