--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,7 +1,8 @@
 <div>
   <div class="col-md4 offset-md-4">
-    <h2 class="text-center" pt-5>連絡先一覧</h2>
-<p class="text-center"><%= flash[:notice] %></p>
+    <h2 class="text-center">連絡先一覧</h2>
+  </div>
+</div>
 <br>
 <%= link_to '連絡先を追加', new_contact_path %>
 
