--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     </head>
     
     <body>
-    <div id="particles-js"></div>
+    <div id="particles-js" style="z-index:-10;"></div>
     <div class="header">
       <%= link_to root_path do %>
         <% image_tag 'logo.png', alt: 'Logo' %>
